tests/mysql/ui-common/section_param_unused_in_section_sql.stderr
error: sql_forge!: parameter :id is unused in the SQL template
  --> tests/mysql/tmp-ui/section_param_unused_in_section_sql.rs:13:20
   |
13 |                 ( :id = 1i64 ),
   |                    ^^
